# dpycnf

./: .gitignore  CMakeLists.txt  LICENCE.txt  README.md  azure-pipelines.yml  dpycnf.sln  nodeips.json  vvand10.xml  vvand20.xml
dpycnf/: CMakeLists.txt  SaxParser.cpp  SaxParser.h  VvandConfigParser.cpp  VvandConfigParser.h  XmlException.cpp  XmlException.h  dpycnf.h  dpycnf.vcxproj  dpycnf.vcxproj.filters  packages.config  stdafx.h
dpycnf/Visus/VvandConfig/: DisplayConfiguration.cpp  Machine.cpp  Tile.cpp
dpycnf/include/: dpycnf.h  dpycnfapi.h
dpycnf/include/Visus/: Offset.h  Size.h  StereoChannel.h
dpycnf/include/Visus/VvandConfig/: DisplayConfiguration.h  Machine.h  Tile.h
dpycnf/visus/vvand_config/: api.h  display_configuration.h  display_configuration.inl  equals.h  literal.h  machine.h  machine.inl  ndisplay_builder.h  ndisplay_builder.inl  offset.h  offset.inl  sax_parser.h  sax_parser.inl  size.h  size.inl  stereo_channel.h  stereo_channel.inl  tile.h  tile.inl  vvand_config_parser.h  vvand_config_parser.inl  xml_exception.h  xml_exception.inl  xmljson.h
dpycnf2ndisplay/: dpycnf2ndisplay.cpp  dpycnf2ndisplay.vcxproj  dpycnf2ndisplay.vcxproj.filters
test/: packages.config  test.cpp  test.vcxproj
