# <copyright file="CMakeLists.txt" company="Visualisierungsinstitut der Universität Stuttgart">
# Copyright © 2025 Visualisierungsinstitut der Universität Stuttgart.
# Licensed under the MIT licence. See LICENCE file for details.
# </copyright>
# <author>Christoph Müller</author>


# Instruct clients to add the header-only library in the dpycnf directory.
add_subdirectory(dpycnf)
